# File-Integrity-Monitor

./: .gitignore  Dockerfile  README.md  SETUP.md  THREAT_MODEL.md  cleanup.sh  docker-compose.yml  fim.yml  pyproject.toml  requirements.txt  reset_project.sh
demo_files/: README.md  demo_script.sh
demo_files/sample_files/: config.ini  data.txt  newfile.txt  script.sh  temp.txt
file_integrity_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
fim/: __init__.py  cli.py  core.py  database.py  models.py
tests/: __init__.py  test_integration.py  test_models.py
