[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-integrity-monitor"
version = "1.0.0"
description = "Cross-platform File Integrity Monitor with tamper-evident logging"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "File Integrity Monitor Team", email = "team@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
]
requires-python = ">=3.10"
dependencies = [
    "watchdog>=3.0.0",
    "cryptography>=41.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
docker = [
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
fim = "fim.cli:main"

[project.urls]
Homepage = "https://github.com/example/file-integrity-monitor"
Repository = "https://github.com/example/file-integrity-monitor"
Issues = "https://github.com/example/file-integrity-monitor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fim*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=fim --cov-report=term-missing"
