[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-file-integrity-monitor"
version = "1.0.0"
description = "Simple File Integrity Monitor for baseline creation and verification"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "File Integrity Monitor Team", email = "team@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
    "Topic :: Education",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
fim = "fim.cli:main"

[project.urls]
Homepage = "https://github.com/example/simple-file-integrity-monitor"
Repository = "https://github.com/example/simple-file-integrity-monitor"
Issues = "https://github.com/example/simple-file-integrity-monitor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fim*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
